Fixed Asset Distortion

--- a/css/style.css
+++ b/css/style.css
@@ -238,6 +238,7 @@ body {
   .card__picture {
     background-size: cover;
     height: 23rem;
+    -webkit-background-blend-mode: screen;
     background-blend-mode: screen;
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     border-top-left-radius: 3px;
