--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -61,6 +61,7 @@
     &__picture {
         background-size: cover;
         height: 23rem;
+        -webkit-background-blend-mode: screen;
         background-blend-mode: screen;
         clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
         border-top-left-radius: 3px;
